src/rules/snapshots/pg_migration_lint__rules__pgm105__tests__add_column_serial_fires.snap
---
source: src/rules/pgm105.rs
expression: findings
---
- rule_id: PGM105
  severity: Info
  message: "Column 'seq_id' on 'orders' uses a sequence default (serial/bigserial). Prefer GENERATED { ALWAYS | BY DEFAULT } AS IDENTITY for new tables (PostgreSQL 10+). Identity columns have better ownership semantics and are the SQL standard approach."
  file: migrations/002.sql
  start_line: 1
  end_line: 1
